
                 - Really deleted "eager_tabling" ;-).
                 - Found a couple of errors in "dra".
                 - "dra" checks consistency of declarations with definitions.
                 - "dra" gives priority to new answers (this can be changed by
                    using ":- old_first ...").
                 - The wallpaper trace is more informative.

19 Feb 2009:   Fifth "internal public" release:

                 - "dra" is in its own module.
                 - "bottom" renamed to "support" in "translate_colp".
                 - "support" and "load_support" implemented in "top_level".
                 - "dra" can now handle "support".

24 Feb 2009:   Sixth "internal public" release:

                 - Various incompatibilies between the Eclipse and Sicstus
                   versions of programs ameliorated.  Was able to remove
                   several .ecl files, as their .pl versions can be run on
                   both systems.
                 - Suppressed a few minor errors caused by changed
                   conventions.
                 - Added checking for singleton variables.
                 - Improved the format of longer diagnostic messages.

27 Feb 2009:   Seventh "internal public" release:

                 - "dra" now has common code for both systems, only tiny
                   shell files remain.
                 - Queries are no longer checked for singleton variables.
                 - Implemented checks for undefined predicates and predicates
                   that are defined but not called: gave meaning to
                   ":- top ...".
                 - Updated a number of examples with top declarations, to
                   suppress the new warnings.
                 - Brought the LTL examples in line with the latest
                   improvements (particularly "support").
                 - Various small improvements.

-------------------------------------------------------------------------------