@@ -1,11 +1,0 @@
-%% Operator declarations for LTL
-
-:- op( 10,  fy , ~   ).   % not
-:- op( 20, xfy , ^   ).   % and
-:- op( 30, xfy , v   ).   % or
-:- op( 10,  fy , x   ).   % LTL: "next"
-:- op( 10,  fy , f   ).   % LTL: "eventually"
-:- op( 10,  fy , g   ).   % LTL: "always"
-:- op( 20, xfx , u   ).   % LTL: "until"
-:- op( 20, xfx , r   ).   % LTL: "release"
-
